--- a/src/PokemonPage.css
+++ b/src/PokemonPage.css
@@ -3,10 +3,21 @@
 }
 
 .form {
-  max-width: 1280px;
+  width: 1000px;
   padding: 1rem;
   background-color: white;
   margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Media query for screens smaller than 768 pixels */
+@media screen and (max-width: 768px) {
+  .form {
+    width: 80%; /* Set a different width for smaller screens, e.g., full width */
+  }
 }
 
 .searchInput {
